# STM32L0xx_Template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config-doxygen.conf
conf/: stm32l0xx_hal_conf.h
include/: stm32l0xx_it.h
linker/: linker.ld
scripts/: run_doxygen.sh  run_formatter.sh  start_gdb.sh  start_openocd.sh
src/: startup.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  system_stm32l0xx.c  template_appl.c
